# Deep-Similarity-Retrieval-Boosting-Neural-Ranking-with-Trainable-Attention

./: project_summary.md  pyproject.toml
src/: attention_retriever.py  baselines.py  run_experiments.py  test_models.py
