[project]
name = "attention-retriever-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beir>=2.2.0",
    "numpy>=2.3.1",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
